syntax = "proto3";

package cloudsensei;

service IngestService {
  // Bidirectional streaming RPC
  rpc StreamMetrics(stream MetricBatch) returns (Ack);
  rpc StreamLogs(stream LogBatch) returns (Ack);
}

message MetricBatch {
  string tenant_id = 1;
  string ts = 2;  // ISO timestamp
  repeated Metric metrics = 3;
}

message Metric {
  string name = 1;
  double value = 2;
  map<string, string> labels = 3;
}

message LogBatch {
  string tenant_id = 1;
  int64  sequence = 2;
  repeated LogEntry entries = 3;
  map<string,string> labels = 4;
  bool  strict = 5;
  int64 sent_unix_ms = 6;
}

message LogEntry {
  string service = 1;
  string level = 2;
  string message = 3;
  map<string, string> labels = 4;
}

message Ack {
  bool success = 1;
  string message = 2;
}
